[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "sceptic"
version = "0.3.3"
description = "Pseudotime analysis for time-series single-cell sequencing and imaging data"
authors = [
  { name="Gang Li", email="gangliuw@uw.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scikit-learn",
  "xgboost",
  "pandas",
  "svm"
]

[project.urls]
"Homepage" = "https://github.com/Noble-Lab/Sceptic"
"Bug Tracker" = "https://github.com/Noble-Lab/Sceptic/issues"